add link to gh profile

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
     <div class="content">
       
     </div>
-    <footer>Copyright © 2024 <a href="#">kkybn</a></footer>
+    <footer>Copyright © 2024 <a href="https://github.com/kkybn">kkybn</a></footer>
   </body>
 </html>
