Initial dist subtree commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ichiban</title>
-  </head>
+  <link rel="icon" href="favicon.ico"><script defer src="bundle.js"></script></head>
   <body>
     <header class="header">
       <h2 class="shop-name">Ichiban Ramen</h2>
